# laren

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
.obs/: workflows.yml
data/: LICENSE  emoji.tsv
docs/: index.html
pkg/arch/: PKGBUILD  fcitx5-laren.install
pkg/debian/: control
pkg/fedora/: fcitx5-laren.spec
pkg/obs/: _service  debian.changelog  debian.control  debian.postinst  debian.rules  fcitx5-laren.dsc  fcitx5-laren.spec
po/: CMakeLists.txt  ar.po  fcitx5-laren.pot
resources/: default-profile  laren-addon.conf.in  laren-addon.conf.in.in  laren-im.conf  laren-im.conf.in
scripts/: build_dictionary.py  install.sh  obs-setup.sh  postinstall-common.sh  release.sh
src/: CMakeLists.txt
src/core/: candidate.h  emoji_map.cpp  emoji_map.h  ranker.cpp  ranker.h  rule_engine.cpp  rule_engine.h  transliterator.cpp  transliterator.h  word_history.cpp  word_history.h
src/dict/: dictionary.cpp  dictionary.h  trie.cpp  trie.h
src/engine/: laren_engine.cpp  laren_engine.h  laren_state.cpp  laren_state.h
src/util/: mmap_file.cpp  mmap_file.h  unicode.cpp  unicode.h
tests/: CMakeLists.txt  PRERELEASE_CHECKLIST.md  test_dictionary.cpp  test_ranker.cpp  test_rule_engine.cpp  test_transliterator.cpp  test_trie.cpp  test_unicode.cpp
tests/ci/postinstall/: lib.sh  postinstall_functions.sh  run_tests.sh  test_gnome_env.sh  test_hyprland.sh  test_kde_kwinrc_existing.sh  test_kde_kwinrc_new.sh  test_kde_no_envvars.sh  test_no_clobber.sh  test_no_double_preedit.sh  test_profile_append.sh  test_profile_create.sh  test_profile_idempotent.sh  test_source_regressions.sh  test_sway.sh
tests/ci/postinstall/fixtures/: existing_profile.ini  hyprland.conf  kwinrc_no_wayland.ini  kwinrc_with_wayland.ini  sway_config
tests/ci/qemu/: install_from_source.sh  install_package.sh  run_e2e.sh  verify_ime.sh
tests/ci/qemu/profiles/: gnome.sh  hyprland.sh  kde-plasma.sh  sway.sh
tests/integration/: CMakeLists.txt  testdir.h.in  testlaren.cpp
tests/integration/addon/: CMakeLists.txt
tests/integration/inputmethod/: CMakeLists.txt
tests/test_data/: small_dictionary.tsv
